--- a/schematic_writer/Cargo.toml
+++ b/schematic_writer/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_builder = "0.20.0"
 quartz_nbt = "0.2.9"
