make it work(?)

--- a/schematic_assembler/Cargo.toml
+++ b/schematic_assembler/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 derive_builder = "0.20.0"
 quartz_nbt = "0.2.9"
+schematic_writer = { path = "../schematic_writer" }
